fix spacing of statements table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ body .container {
     margin-left: -12px;
 }
 
+.statements-table:last-of-type {
+    padding-bottom: 15px;
+}
+
 .statements-table .table-group-divider {
     border-top-color: #a9a9a9;
     border-bottom: solid 2px #a9a9a9;
